fixed overflow bug on opportunity card

--- a/client/app/opportunities/search/search.scss
+++ b/client/app/opportunities/search/search.scss
@@ -137,6 +137,9 @@
 
   .opportunities-deck {
     box-sizing: content-box;
+    .no-overflow {
+      white-space: normal;
+    }
   }
   .opportunity-card {
     box-shadow: 0 0 0 1px rgba(0,0,0,.1);
